--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/inter": "^5.2.5",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^6.4.8",
-    "@mui/material": "^6.4.8",
+    "@mui/material": "^6.4.11",
+    "@mui/x-date-pickers": "^7.28.3",
     "@reduxjs/toolkit": "^2.6.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "frontend": "file:",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0"
